# yuri-jam24

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  Cargo.toml  STYLE.md  imgui.ini  points.txt  transbian-god-conquerer.tiled-project
.github/workflows/: build.yml
assets/: events.lua  events.txt
assets/audio/: Master.bank  Master.strings.bank
assets/audio/Desktop/: Master.bank  Master.strings.bank  Menu.bank  SFX.bank
assets/events/: test.lua
assets/maps/: debug_awesome.tmx  debug_background.tmx  debug_chars.tmx  debug_fallsound.tmx  debug_map.mnff  debug_map.tmj  debug_map.tmx  debug_platforms.tmx  debug_something.tmx  untitled.inff  untitled.mnff  untitled.tmx
assets/shaders/: b2d_circle.wgsl  b2d_polygon.wgsl  basic.frag  basic.spv  basic.vert  basic.wgsl  direct_light.wgsl  hdr_tonemap.wgsl  light.wgsl  object.wgsl  point_light.wgsl  screen_blit.wgsl  shadowmap.wgsl  sprite_shadowmap.wgsl  tilemap.wgsl  tilemap_shadowmap.wgsl  ui_object.wgsl  ui_sprite.wgsl
assets/shadowcasters/: box.shdw  player.shdw  red_start.shdw
assets/templates/: cone_light.tj  cone_light.tx  direct_light.tj  direct_light.tx  point_light.tj  point_light.tx
assets/tilesets/: red_test.tnff  red_test.tsj  red_test.tsx  tileset_coolfuckingtileset.tsx  tileset_test2.tsx
cmake/: FindFMOD.cmake  FindWGPU.cmake  sdl.cmake  sdl_renames.cmake  shadowcasters.cmake  tests.cmake  tools.cmake  wgpu.cmake
dev-stuff/: give_this_file_a_better_name.odt
dev-stuff/docs/: inff-format.md  shdw-format.md
dev-stuff/obsidian/: .gitignore  Questions.md  The Angels.md  The Sun.md  Untitled.md  aghghghghh fuckkkk.md  braindump.md  characters.md  i am going to write something today.md  i am using obsidian like a normal writer.md  pleaase.md
dev-stuff/obsidian/.obsidian/: workspace.json
dev-stuff/obsidian/characters/: willow.md
dev-stuff/obsidian/the drabblezone/: 2.md  3.md  4.md  5.md
docs/: lvl-format.md
fmod_project/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod_project/Metadata/Asset/: {31065946-1514-46ed-91b6-e08b20c50b22}.xml  {4695c5e0-e93e-40c0-aad3-8c60f571604c}.xml  {734ea33e-143e-4a43-9222-587bdfdf7d0c}.xml  {abb5e9e1-f624-4a3b-ba59-02fc17951d13}.xml  {bc0360a6-504c-434d-b778-8b78db444cf6}.xml  {bf3315d1-669b-43ec-9178-04a8bd6dbf06}.xml  {f3b40287-8e43-47bb-9344-6fa28bbd4a1e}.xml  {fac07b2b-1d46-4c8d-84ec-6710facd8a48}.xml
fmod_project/Metadata/AudioFile/: {085e6b0b-37cc-4598-a090-09cf96234e90}.xml  {20f30ca4-fa31-4db8-ab70-bb2968ee82d8}.xml  {2c3161d8-164a-43f4-b7c5-980f45f2a90e}.xml  {2e44c19d-b348-467d-be95-f7317391baba}.xml  {31cb094f-6b32-48a7-a6f6-6781a19232c1}.xml  {328b2d74-2aef-452f-a602-34e29005c19b}.xml  {465e1f2f-82eb-44a0-bde2-a57f586638a6}.xml  {4fe94611-00a5-4924-92f6-48e9cc13c5bd}.xml  {5e427fe4-49a6-4066-a93f-66b84d864c44}.xml  {5f513bb5-0567-4772-801b-a05b90945caf}.xml  {6225c7ce-22df-4e40-990c-ad981b10198b}.xml  {6c8ad1b8-79da-4138-be35-4c6e5918f49d}.xml  {70b2b85e-1bc1-4b4c-94e4-50d0861e7398}.xml  {85a0bc5c-ccc2-4dc8-bd43-66e2194cd62c}.xml  {87380793-7f56-4888-9b34-697a797cb6e3}.xml  (+13 more)
fmodstudio/: .gitignore  PKGBUILD
glad/: CMakeLists.txt
glad/src/: gl.c  glad.c
lua/: lua  luac
src/: CMakeLists.txt  core_types.c  core_types.h  lvl-parser.c  lvl-parser.h  lvl_parser.c  main.c  player.c  player.h  resources.h  sensible_nums.h  settings.c  settings.h
src/animation/: CMakeLists.txt  animation.c  animation.h  definition.c  definition.h
src/audio/: CMakeLists.txt  audio.c  audio.h
src/characters/: CMakeLists.txt  autorun.c  autorun.h  basic.c  basic.h  character.c  character.h  rigidbody.c  rigidbody.h
src/debug/: CMakeLists.txt  debug_window.c  debug_window.h  level-editor.c  level-editor.h  level_editor.c  level_editor.h
src/debug/windows/: CMakeLists.txt  brush.c  brush.h  new-map.c  new-map.h  new_map.c  new_map.h  test.c  test.h  tilemap-editor.c  tilemap-editor.h  window-container.c  window-container.h  window.h  window_container.c  window_container.h
src/events/: CMakeLists.txt  command-funcs.c  command-funcs.h  command-list.c  compiler.c  compiler.h  event.c  event.h  event_loader.c  event_loader.h  instruction.c  instruction.h  interpreter.c  interpreter.h  lexer.c  lexer.h  token.h  value.c  value.h  vm.c  vm.h
src/events/commands/: command.h  commands.c  commands.h
src/fonts/: CMakeLists.txt  font.c  font.h  fonts.c  fonts.h
src/graphics/: CMakeLists.txt  bind_group_layouts.c  bind_group_layouts.h  binding_helper.c  binding_helper.h  caster_manager.c  caster_manager.h  graphics.c  graphics.h  imgui-wgpu.h  layer.c  layer.h  light.c  light.h  quad_manager.c  quad_manager.h  shaders.c  shaders.h  shadowcaster.h  shadowmap.c  shadowmap.h  sprite.c  sprite.h  sprite_layer.c  sprite_layer.h  tex_manager.c  tex_manager.h  tilemap.c  tilemap.h  transform_manager.c  transform_manager.h  ui_sprite.c  ui_sprite.h  utils.c  utils.h  wgpu_resources.c  wgpu_resources.h
src/input/: CMakeLists.txt  input.c  input.h
src/items/: CMakeLists.txt  item.c  item.h
src/parsers/: CMakeLists.txt  inff.c  inff.h  ini.c  ini.h  map.c  map.h  shdw.c  shdw.h
src/physics/: CMakeLists.txt  debug_draw.c  debug_draw.h  physics.c  physics.h
src/scenes/: CMakeLists.txt  fmod_logo.c  fmod_logo.h  map.c  map.h  map_loader.c  map_loader.h  scene.c  scene.h  title.c  title.h
src/time/: CMakeLists.txt  fixed.c  fixed.h  real.c  real.h  time.c  time.h  virt.c  virt.h
src/ui/: CMakeLists.txt  inventory.c  inventory.h  settings.c  settings.h  textbox.c  textbox.h
src/utility/: CMakeLists.txt  common_defines.h  files.c  files.h  graphics.c  graphics.h  hashmap.c  hashmap.h  hashset.c  hashset.h  linked-list.c  linked-list.h  linked_list.c  list.c  list.h  log.c  log.h  macros.h  time.c  time.cpp  time.h  vec.c  vec.h
stb/: stb_impl.c
tests/: hashmap_test.c  hashset_test.c  linked_list_test.c  vec_test.c
tiled_extensions/: inff.js  package-lock.json  package.json
tools/: shadowcast.c  shadowcast.py
tools/shadowcast/: Cargo.toml
tools/shdw/: Cargo.toml
tools/shdwview/: Cargo.toml
(+37 files in other folders)
